# MediaCenterSignUp

./: .gitignore  .pylintrc  Procfile  README.md  pyproject.toml  requirements.txt
project/: __init__.py  constance.py  dev_settings.py  prod_settings.py  settings.py  urls.py
signup/: admin.py  auth.py  forms.py  google_oauth.py  models.py  urls.py  views.py
signup/faculty/: apps.py  filters.py  forms.py  spreadsheets.py  tasks.py  urls.py  views.py
signup/faculty/api/: filters.py  serializers.py  urls.py  views.py
signup/faculty/management/commands/: deleteoldclassperiods.py
signup/faculty/templates/faculty/: base.html  future_periods_form.html  periods_list.html
signup/faculty/templates/signup/faculty/: base.html  future_periods_form.html  periods_list.html  settings_form.html  signups.html  signups_app.html
signup/faculty/templates/signup/faculty/components/: base.html  navbar.html  navbar_item.html
signup/faculty/tests/: common.py  test_api_views.py  test_future.py  test_general_html_views.py  test_management.py  test_periods_list.py  test_serializers.py  test_settings.py  test_spreadsheets.py  test_tasks.py
signup/migrations/: 0001_initial.py  0002_student_sign_up.py  0003_alter_student_info.py  0004_alter_class_periods_and_sign_ups.py  0005_add_date_signed_up.py  0006_add_confirm_attendance_ability.py  0007_add_is_active_field_to_User.py  0008_make_field_nullable_and_blank.py
signup/templates/signup/: base.html  login.html  login_failed.html  student_info_form.html  student_sign_up_form.html  student_sign_up_form_closed.html  student_sign_up_success.html
signup/templates/signup/components/: base.html  view_existing_signups.html
signup/tests/: test_auth.py  test_models.py  test_student.py
static/signup/: style.css  variables.css
static/signup/faculty/: future_form.js  signups.js  style.css
templates/admin/: base_site.html
