[tool.poetry]
name = "librarysystem"
version = "0.1.0"
description = ""
authors = ["Andrew Henkel <search1230@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.*, <3.10.*"
Django = "~3.2"
django-crispy-forms = "~1.14"
python-decouple = "^3.6"
djangorestframework = "~3.14"
requests-oauthlib = "~1.3"
django-filter = "~22.1"
django-constance = {version = ">=2.9.0,<2.10.0", extras = ["database"]}
crispy-bootstrap5 = "^0.6"
openpyxl = "~3.1.0"
lxml = "~4.9.1"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
pylint-django = "^2.5.3"
black = "^23.1.0"
isort = "^5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
