[tool.poetry]
name = "librarysystem"
version = "0.1.0"
description = ""
authors = ["Andrew Henkel <search1230@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.*, <3.10.*"
Django = "~4.2.9"
django-crispy-forms = "~2.1"
python-decouple = "^3.8"
djangorestframework = "~3.14.0"
requests-oauthlib = "~1.3.1"
django-filter = "~23.5"
django-constance = {version = "~3.1.0", extras = ["database"]}
crispy-bootstrap5 = "2023.10"
openpyxl = "~3.1.2"
lxml = "^5.1.0"
mysqlclient = "~2.2.1"

[tool.poetry.dev-dependencies]
pylint = "^3.0.3"
pylint-django = "^2.5.3"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
